# wallwatch

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  filewatcher.cpp  filewatcher.h  fn.cmake  libs.cmake  log  main.qml  themer.cpp  themer.h  wallwatch.cpp  wallwatch.h
colorspace/: blend.cpp  blend.h  color_const.h  color_conversion.h  color_types.h  colorspace.cpp  colorspace.h  lab.cpp  lab.h
colorspace/temperature/: temperature.cpp  temperature.h
m3/contrast/: contrast.cc  contrast_curve.h
m3/hct/: cam.cc  cam.h  hct.cc  hct.h  hct_solver.cc  viewing_conditions.cc
m3/score/: score.cpp  score.h
m3/utils/: utils.cc
quantize/: celebi.cpp  celebi.h  imgproc.cpp  imgproc.h  wsmeans.cpp  wsmeans.h  wu.cpp  wu.h
scheme/: color_roles.h  core.h  scheme.h  tone.cpp  tone.h
scheme/dislike/: dislike.cpp  dislike.h
scheme/dynamic/: dynamiccolor.cpp  dynamiccolor.h  dynamicscheme.cpp  dynamicscheme.h  m3_dynamic.cpp  m3_dynamic.h  tonal_pair.h  variants.h
scheme/variants/: scheme_content.cc  scheme_content.h  scheme_expressive.cc  scheme_expressive.h  scheme_fidelity.cc  scheme_fidelity.h  scheme_fruit_salad.cc  scheme_fruit_salad.h  scheme_header.h  scheme_monochrome.cc  scheme_monochrome.h  scheme_neutral.cc  scheme_neutral.h  scheme_rainbow.cc  scheme_rainbow.h  scheme_tonal_spot.cc  scheme_tonal_spot.h  scheme_vibrant.cc  scheme_vibrant.h
